# compl-math-lab-5

./: CMakeLists.txt
src/: main.cpp
src/graph/: MainWindow.cpp  MainWindow.h  UiEvents.cpp  UiEvents.h
src/graph/draw/: AbstractShape.h  Axis.cpp  Axis.h  AxisNumbers.cpp  AxisNumbers.h  FuncGraph.cpp  FuncGraph.h  Grid.cpp  Grid.h  IShape.h  Legend.cpp  Legend.h  NonlinearFuncGraph.cpp  NonlinearFuncGraph.h  Points.cpp  Points.h
src/latex/: TexFile.cpp  TexFile.h  TexGraph.cpp  TexGraph.h  TexTable.cpp  TexTable.h  TexText.cpp  TexText.h
src/methods/approximation/: AbstractApproximation.cpp  AbstractApproximation.h  ApproximationEnum.def  ApproximationEnum.h  ApproximationManager.cpp  ApproximationManager.h  IApproximation.h
src/methods/approximation/impl/: Cubic.cpp  Cubic.h  Exponential.cpp  Exponential.h  Linear.cpp  Linear.h  Logarithmic.cpp  Logarithmic.h  Power.cpp  Power.h  Quadratic.cpp  Quadratic.h
src/methods/interpolation/: BesselInterpolation.cpp  BesselInterpolation.h  Interpolation.h  LagrangePolynomial.cpp  LagrangePolynomial.h  NewtonPolynomial.cpp  NewtonPolynomial.h  StirlingScheme.cpp  StirlingScheme.h
src/methods/linear_systems/: GaussianElimination.cpp  GaussianElimination.h
src/utils/math/: DFrame.h  Math.cpp  Math.h  Matrix.h
src/utils/menu/: IStep.h  Menu.cpp  Menu.h
src/utils/objects/: Points.cpp  Points.h
